# mclq

./: .gitignore  CMakeLists.txt  README.md  main.py  method_ilq.py  method_mclq.py  method_npg.py  pyproject.toml  requirements_p12.txt  setup.py
c_src/: .clang-format  CMakeLists.txt
c_src/include/mclq/: alloc.h  module.h  random.h
c_src/src/: module.c
c_src/src/utils/: alloc.c  random.c
envs/: driving.py  pointmass.py
mclq/: __init__.py  core.py  utils.py
tests/: _test_classes_pm_h.py  test_mclq.py  test_nested_pm_h.py  test_path.py  test_pm_h.py  test_quad.py  test_smd.py
utils/: human.py  utils.py
